[package]
name = "thesis-watcher"
version = "0.1.0"
authors = ["Reinier Maas <ReinierMaas@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4"
structopt = "0.2"
colored = "1"
regex = "1"
lazy_static = "1"